--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Student Form:</h2
+<h2>Student Form:</h2>
 <%= form_tag students_path do %>
 <label>Student First Name:</label><br>
 <%= text_field_tag :'student[first_name]' %><br>
@@ -10,3 +10,4 @@
 <% end %>
 
 <%= params.inspect %>
+
